# screenpipe

./: README.md  TESTING.md  commit_msg.txt  fix_language.sh  notify.sh  patch.diff  patch_window_api.patch  pr_body.txt  run_compaction_cycle_test.rs  send_telegram.sh  sentry_7252076429.json  sentry_7333298925.json  sentry_7336972819.json  state.json  telegram_message.txt  temp_magnify.rs  test_admin  test_admin.rs  test_arc.sh  test_compaction.rs  test_err.rs  test_expand.rs  test_fts  test_fts.rs  test_fts5.js  test_fts5.sql  test_rust  test_rust.rs  test_sanitize  test_sanitize.rs  test_sqlite.rs  test_text_norm  test_text_norm.rs  test_windows.rs  window_api_class_reg.txt
.claude/skills/screenpipe-api/: SKILL.md
.github/workflows/: e2e-test.yml
apps/screenpipe-app-tauri/components/: pipe-store.tsx  standalone-chat.tsx  text-overlay.tsx  update-banner.tsx
apps/screenpipe-app-tauri/src-tauri/: Cargo.toml  tauri.conf.json
crates/: test_libload.rs
crates/screenpipe-a11y/examples/: linux_debug.rs  linux_deep.rs  linux_e2e.rs
crates/screenpipe-audio/: Cargo.toml
crates/screenpipe-audio/examples/: bench_engines.rs  bench_parakeet.rs  bench_quality.rs  bench_quality2.rs  screenpipe-audio.rs
crates/screenpipe-connect/: Cargo.toml
crates/screenpipe-db/: Cargo.toml
crates/screenpipe-engine/: Cargo.toml
crates/screenpipe-secrets/: Cargo.toml
crates/screenpipe-secrets/src/: crypto.rs  lib.rs  migration.rs  store.rs
test_repro/: Cargo.toml
test_repro/src/: main.rs
test_sqlx_dir/: Cargo.toml
test_sqlx_dir/src/: main.rs
(+165 files in other folders)
